; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_test1.c_getStmtPointer.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_test1.c_getStmtPointer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TCL_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32**)* @getStmtPointer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @getStmtPointer(i32* %0, i8* %1, i32** %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32**, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32** %2, i32*** %6, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = call i64 @sqlite3TestTextToPtr(i8* %7)
  %9 = inttoptr i64 %8 to i32*
  %10 = load i32**, i32*** %6, align 8
  store i32* %9, i32** %10, align 8
  %11 = load i32, i32* @TCL_OK, align 4
  ret i32 %11
}

declare dso_local i64 @sqlite3TestTextToPtr(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
